# google-docs-to-md-converter

./: .gitignore  README.md  docx2md.py  pyproject.toml
.github/workflows/: python-tests.yml
google_docs_to_md_converter/: docx2md.py
tests/: download_and_mock.py  test_docx2md.py
tests/mocks/: document.docx  document_pandoc.md
